--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@
 [workspace.package]
   authors    = ["IDEDARY"]
   version    = "0.3.2"
-  edition    = "2021"
+  edition    = "2024"
   license    = "MIT OR Apache-2.0"
   repository = "https://github.com/bytestring-net/bevy-lunex"
   keywords   = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
@@ -46,7 +46,7 @@
   #=== GAME ENGINE SOURCE === #
 
   # GAME ENGINE
-  bevy = { version = "^0.15", default-features = false, features = [
+  bevy = { version = "0.16.0-rc.5", default-features = false, features = [
     "bevy_pbr",
     "bevy_sprite",
     "bevy_text",
@@ -64,7 +64,8 @@
   #===============================#
   #=== GAME ENGINE EXTENSIONS === #
 
-  bevy_rich_text3d  = { version = "^0.2" }
+  #bevy_rich_text3d  = { version = "^0.2" }
+  bevy_rich_text3d = { git = "https://github.com/mintlu8/bevy_rich_text3d" }
 
   #===========================#
   #=== RUST MISCELLANEOUS === #
