--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@
   #=== GAME ENGINE SOURCE === #
 
   # GAME ENGINE
-  bevy = { version = "0.16.0-rc.5", default-features = false, features = [
+  bevy = { version = "0.16.0", default-features = false, features = [
     "bevy_pbr",
     "bevy_sprite",
     "bevy_text",
@@ -64,8 +64,7 @@
   #===============================#
   #=== GAME ENGINE EXTENSIONS === #
 
-  #bevy_rich_text3d  = { version = "^0.2" }
-  bevy_rich_text3d = { git = "https://github.com/mintlu8/bevy_rich_text3d" }
+  bevy_rich_text3d  = { version = "^0.3" }
 
   #===========================#
   #=== RUST MISCELLANEOUS === #
