--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@
 
 [workspace.package]
   authors    = ["IDEDARY"]
-  version    = "0.3.2"
+  version    = "0.4.0"
   edition    = "2024"
   license    = "MIT OR Apache-2.0"
   repository = "https://github.com/bytestring-net/bevy-lunex"
@@ -46,7 +46,7 @@
   #=== GAME ENGINE SOURCE === #
 
   # GAME ENGINE
-  bevy = { version = "0.16.0", default-features = false, features = [
+  bevy = { version = "^0.16.0", default-features = false, features = [
     "bevy_pbr",
     "bevy_sprite",
     "bevy_text",
