--- a/examples/text3d/Cargo.toml
+++ b/examples/text3d/Cargo.toml
@@ -12,5 +12,5 @@
 #=== DEPENDENCIES & FEATURES ===#
 
 [dependencies]
-  bevy = { version = "0.16.0", default-features = true }
+  bevy = { version = "^0.16.0", default-features = true }
   bevy_lunex = { workspace = true }
