--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -24,6 +24,7 @@
   # RUST MISCELLANEOUS
   radsort = { workspace = true }
   colored = { workspace = true }
+  rand    = { workspace = true }
 
 [features]
 
